[gd_scene load_steps=2 format=3 uid="uid://btijcfcl6cc3p"]

[ext_resource type="Script" uid="uid://mu58qvrrls8u" path="res://Code/LoseScreen.gd" id="1"]

[node name="LoseScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Overlay" type="ColorRect" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.6)

[node name="Card" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.25
anchor_top = 0.25
anchor_right = 0.75
anchor_bottom = 0.75

[node name="VBox" type="VBoxContainer" parent="Card"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Spacer" type="Control" parent="Card/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="LoseLabel" type="Label" parent="Card/VBox"]
layout_mode = 2
text = "You Lost"
horizontal_alignment = 1

[node name="ButtonContainer" type="HBoxContainer" parent="Card/VBox"]
layout_mode = 2

[node name="QuitButton" type="Button" parent="Card/VBox/ButtonContainer"]
layout_mode = 2
text = "Quit Game"

[node name="MenuButton" type="Button" parent="Card/VBox/ButtonContainer"]
layout_mode = 2
text = "Main Menu"
